60-eks/app/05-gateway/gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: roboshop-gateway
  namespace: roboshop
spec:
  gatewayClassName: roboshop-aws-alb
  infrastructure:
    parametersRef:
      group: gateway.k8s.aws
      kind: LoadBalancerConfiguration
      name: roboshop-aws-alb-config
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
  - name: https
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      options:
        gateway.k8s.aws/certificate-arn: "arn:aws:acm:us-east-1:104050870679:certificate/956e9e43-67b0-4a57-8f0a-0e54bc674736"
    allowedRoutes:
      namespaces:
        from: Same
